# TradingSystem

./: .gitignore  CMakeLists.txt  README.md  build.sh  run_clients.sh
docs/: Architectures.md  MatchingEngine.md  Possible Optimizations.md
include/: logger.hpp  macros.hpp  mem_pool.hpp  spsc_queue.hpp  thread_utils.hpp  time_utils.hpp
include/client/: feature_engine.hpp  liquidity_taker.hpp  market_data_consumer.hpp  market_maker.hpp  market_order.hpp  market_order_book.hpp  om_order.hpp  order_gateway.hpp  order_manager.hpp  position_keeper.hpp  risk_manager.hpp  trade_engine.hpp
include/exchange/: client_request.hpp  client_response.hpp  fifo_sequencer.hpp  market_data.hpp  market_data_publisher.hpp  matching_engine.hpp  me_order.hpp  order_book.hpp  order_server.hpp  snapshot_synthetizer.hpp
include/networking/: mcast_socket.hpp  socket_utils.hpp  tcp_server.hpp  tcp_socket.hpp
include/utils/: logger.hpp  macros.hpp  mem_pool.hpp  perf_utils.hpp  spsc_queue.hpp  thread_utils.hpp  time_utils.hpp  types.hpp
src/: exchange_main.cpp  market_data_publisher.cpp  matching_engine.cpp  mem_pool.hpp  order_book.cpp  order_server.cpp  snapshot_synthetizer.cpp  tcp_server.cpp  tcp_socket.cpp
src/client/: liquidity_taker.cpp  market_data_consumer.cpp  market_maker.cpp  market_order_book.cpp  order_gateway.cpp  order_manager.cpp  trade_engine.cpp  trading_main.cpp
src/exchange/: market_data_publisher.cpp  matching_engine.cpp  order_book.cpp  order_server.cpp  snapshot_synthetizer.cpp
src/network/: mcast_socket.cpp
test/: testLogger.cpp  testPools.cpp  testSPSCQueue.cpp  testSocket.cpp
